--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -33,8 +33,8 @@ jobs:
           docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # - name: Update Lambda function with new image
-      #   run: |
-      #     aws lambda update-function-code \
-      #       --function-name ${{ secrets.BACKEND_LAMBDA_ARN }} \
-      #       --image-uri ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-southeast-2.amazonaws.com/credit-score-lambda:latest
+      - name: Update Lambda function with new image
+        run: |
+          aws lambda update-function-code \
+            --function-name ${{ secrets.CREDIT_AI_LAMBDA_ARN }} \
+            --image-uri ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-southeast-2.amazonaws.com/credit-score-lambda:latest
