--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-southeast-2.amazonaws.com
+          ECR_REGISTRY: public.ecr.aws/z4c0m7a6/credit-score-lambda
           ECR_REPOSITORY: credit-score-lambda
           IMAGE_TAG: latest
         run: |
@@ -37,4 +37,4 @@ jobs:
         run: |
           aws lambda update-function-code \
             --function-name ${{ secrets.CREDIT_AI_LAMBDA_ARN }} \
-            --image-uri ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-southeast-2.amazonaws.com/credit-score-lambda:latest
+            --image-uri public.ecr.aws/z4c0m7a6/credit-score-lambda/credit-score-lambda:latest
