--- a/.github/workflows/lambda_deployment.yaml
+++ b/.github/workflows/lambda_deployment.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: public.ecr.aws/z4c0m7a6/credit-score-lambda
+          ECR_REGISTRY: public.ecr.aws/z4c0m7a6
           ECR_REPOSITORY: credit-score-lambda
           IMAGE_TAG: latest
         run: |
